Cleanup outdated Chinese (Simplified) translations.

--- a/translations/zh_Hans/antoinefr-online.json
+++ b/translations/zh_Hans/antoinefr-online.json
@@ -8,8 +8,7 @@
         "admin": {
             "settings": {
                 "displaymax": "显示人数",
-                "titleoflist": "自定义列表标题",
-                "title": "在线会员 - 设置"
+                "titleoflist": "自定义列表标题"
             }
         }
     }
