--- a/translations/zh_Hans/askvortsov-pwa.json
+++ b/translations/zh_Hans/askvortsov-pwa.json
@@ -10,8 +10,7 @@
                     "description_text": "您可以在管理面板的「常规」页面设置应用描述。",
                     "long_name_text": "显示给用户的 web 应用名称",
                     "heading": "关于",
-                    "short_name_text": "应用简称（无空间显示长名称时）",
-                    "name_text": "输入要在 PWA 中使用的长名称。"
+                    "short_name_text": "应用简称（无空间显示长名称时）"
                 },
                 "colors": {
                     "heading": "颜色",
@@ -42,8 +41,7 @@
                 "no_name": "您必须设置应用全名才能使您的应用程序正常工作。",
                 "key_gen_failed": "",
                 "suggest_gmp": "",
-                "success": "恭喜，没有发现潜在问题！",
-                "push_needs_gmp_and_web_push": "必须启用 PHP 扩展 gmp 和 minishlink/web-push 依赖库（composer require minishlink/web-push）才能使通知推送功能起作用。"
+                "success": "恭喜，没有发现潜在问题！"
             }
         },
         "forum": {
