--- a/translations/zh_Hans/clarkwinkelmann-author-change.json
+++ b/translations/zh_Hans/clarkwinkelmann-author-change.json
@@ -11,8 +11,7 @@
                 "created_at": "创建时间",
                 "edited_at": "编辑时间",
                 "submit": "保存",
-                "cancel": "取消",
-                "search_placeholder": "搜索用户"
+                "cancel": "取消"
             },
             "search": {
                 "placeholder": "搜索用户",
@@ -23,8 +22,7 @@
         "admin": {
             "permissions": {
                 "edit-user": "变更主题和帖子作者",
-                "edit-date": "变更主题和帖子日期",
-                "edit": "更新发帖及回帖者"
+                "edit-date": "变更主题和帖子日期"
             }
         }
     }
