--- a/translations/zh_Hans/clarkwinkelmann-bookmarks.json
+++ b/translations/zh_Hans/clarkwinkelmann-bookmarks.json
@@ -17,8 +17,7 @@
         },
         "admin": {
             "settings": {
-                "independentButton": "将下拉书签栏改为主题帖侧边栏显示",
-                "title": "书签设置"
+                "independentButton": "将下拉书签栏改为主题帖侧边栏显示"
             }
         }
     }
