--- a/translations/zh_Hans/clarkwinkelmann-carving-contest.json
+++ b/translations/zh_Hans/clarkwinkelmann-carving-contest.json
@@ -46,13 +46,11 @@
                 "view": "查看作品",
                 "like": "点赞作品",
                 "participate": "参加比赛",
-                "moderate": "主持",
-                "heading": "雕刻大赛"
+                "moderate": "主持"
             },
             "settings": {
                 "maxEntriesPerUser": "每个用户提交数量限制",
-                "colorMode": "使用彩色模式而不是雕刻模式",
-                "title": "雕刻大赛设置"
+                "colorMode": "使用彩色模式而不是雕刻模式"
             },
             "colors": {
                 "simple": "简单颜色设置",
