--- a/translations/zh_Hans/clarkwinkelmann-group-invitation.json
+++ b/translations/zh_Hans/clarkwinkelmann-group-invitation.json
@@ -34,8 +34,7 @@
                 "empty": "目前还没有创建任何邀请链接。",
                 "unlimited": "无限制",
                 "create": "创建",
-                "delete": "删除",
-                "title": "用户组邀请"
+                "delete": "删除"
             }
         },
         "api": {
