--- a/translations/zh_Hans/clarkwinkelmann-status.json
+++ b/translations/zh_Hans/clarkwinkelmann-status.json
@@ -3,8 +3,7 @@
         "admin": {
             "settings": {
                 "only-countries": "仅国旗",
-                "enable-text": "允许文字状态",
-                "title": "状态设置"
+                "enable-text": "允许文字状态"
             },
             "permissions": {
                 "see": "查看状态",
