--- a/translations/zh_Hans/dem13n-discussion-cards.json
+++ b/translations/zh_Hans/dem13n-discussion-cards.json
@@ -1,8 +1,7 @@
 {
     "dem13n": {
         "forum": {
-            "replies": "{count} 回复",
-            "last_reply": "最新回复： "
+            "replies": "{count} 回复"
         },
         "admin": {
             "settings": {
