--- a/translations/zh_Hans/flarum-tags.json
+++ b/translations/zh_Hans/flarum-tags.json
@@ -42,9 +42,7 @@
                 "create_secondary_tag_button": "新建次标签",
                 "primary_heading": "主标签",
                 "secondary_heading": "次标签",
-                "settings_heading": "设置",
-                "create_tag_button": "=> flarum-tags.ref.create_tag",
-                "settings_button": "设置"
+                "settings_heading": "设置"
             }
         },
         "forum": {
@@ -88,8 +86,7 @@
         },
         "ref": {
             "name": "标签名称",
-            "tags": "标签",
-            "create_tag": "新建标签"
+            "tags": "标签"
         }
     }
 }
