--- a/translations/zh_Hans/fof-ban-ips.json
+++ b/translations/zh_Hans/fof-ban-ips.json
@@ -33,11 +33,7 @@
                 "update_title": "更新 IP 黑名单",
                 "ban_ip_no_users": "没有使用此 IP 的其他用户"
             },
-            "empty_text": "暂无 IP 被拉黑。",
-            "nav": {
-                "title": "IP 黑名单",
-                "desc": "新增、删除、查看 IP 黑名单。"
-            }
+            "empty_text": "暂无 IP 被拉黑。"
         },
         "error": {
             "banned_ip_message": "验证失败。",
