--- a/translations/zh_Hans/fof-best-answer.json
+++ b/translations/zh_Hans/fof-best-answer.json
@@ -18,8 +18,7 @@
                 "schedule_stop_overnight": "夜间免打扰（服务器时间晚上 9 点至早上 8 点，禁用提醒服务）",
                 "schedule_log_output": "将调度程序的输出添加到日志存储中",
                 "remind_tag_ids": "若要将提醒功能仅用于特定标签，请在此输入标签 ID （英文逗号分隔）",
-                "use_alt_ui": "将「最佳回复」按钮显示在帖子页脚",
-                "title": "FoF 最佳回复"
+                "use_alt_ui": "将「最佳回复」按钮显示在帖子页脚"
             }
         },
         "forum": {
@@ -38,10 +37,7 @@
                 "preferences": {
                     "awarded_best_answer": "有人将我的帖子设为最佳回复",
                     "best_answer_in_discussion": "我互动的主题有了最佳回复"
-                },
-                "best_answer_set_in_discussion_email": "有新的最佳回复",
-                "awarded_email": "您的帖子被设为最佳回复",
-                "select_email_title": "您解决问题了吗？"
+                }
             }
         },
         "email": {
