--- a/translations/zh_Hans/fof-custom-footer.json
+++ b/translations/zh_Hans/fof-custom-footer.json
@@ -5,8 +5,7 @@
                 "css": "CSS",
                 "height": "页脚高度 (px)",
                 "js": "JS",
-                "text": "页脚文本",
-                "title": "自定义页脚"
+                "text": "页脚文本"
             }
         }
     }
