--- a/translations/zh_Hans/fof-drafts.json
+++ b/translations/zh_Hans/fof-drafts.json
@@ -21,8 +21,7 @@
                 "saving": "正在保存……",
                 "saved": "保存成功！",
                 "exit_alert": "确定放弃对草稿的更改吗？",
-                "discard_empty_draft_alert": "丢弃空草稿？",
-                "alert": "草稿已保存。"
+                "discard_empty_draft_alert": "丢弃空草稿？"
             },
             "dropdown": {
                 "empty_text": "您还没有草稿",
@@ -31,8 +30,7 @@
                 "schedule_button": "定时发布",
                 "tooltip": "=> fof-drafts.forum.dropdown.title",
                 "alert": "确定要删除草稿吗？",
-                "delete_all_alert": "确定要删除所有草稿吗？",
-                "button": "删除草稿"
+                "delete_all_alert": "确定要删除所有草稿吗？"
             },
             "schedule_draft_modal": {
                 "title": "定时发布",
