--- a/translations/zh_Hans/fof-follow-tags.json
+++ b/translations/zh_Hans/fof-follow-tags.json
@@ -11,8 +11,7 @@
                 "unfollow_tag_button": "取消关注",
                 "following": {
                     "following_none_label": "=> fof-follow-tags.ref.filtering_options.none",
-                    "following_tags_label": "=> fof-follow-tags.ref.filtering_options.tags",
-                    "following_all_label": "=> fof-follow-tags.ref.filtering_options.all"
+                    "following_tags_label": "=> fof-follow-tags.ref.filtering_options.tags"
                 }
             },
             "badge": {
@@ -50,9 +49,7 @@
             "settings": {
                 "following_page_default_label": "「我的关注」默认内容",
                 "following_none_label": "=> fof-follow-tags.ref.filtering_options.none",
-                "following_tags_label": "=> fof-follow-tags.ref.filtering_options.tags",
-                "title": "FriendsOfFlarum 关注标签",
-                "following_all_label": "=> fof-follow-tags.ref.filtering_options.all"
+                "following_tags_label": "=> fof-follow-tags.ref.filtering_options.tags"
             }
         },
         "email": {
@@ -65,10 +62,7 @@
                 "newDiscussionInTag": "{recipient_display_name}，你好！\n\n{actor_display_name} 发布新主题于你关注的标签：{discussion_title}\n\n点击下方链接查看主题帖：\n{discussion_url}\n\n---\n\n{post_content}\n",
                 "newPostInTag": "{recipient_display_name}，你好！\n\n{actor_display_name} 发表回复于你关注的标签：{discussion_title}\n\n点击下方链接查看主题新动态：\n{post_url}\n\n---\n\n{post_content}\n\n---\n\n在您跟上最新进度前，您不会再收到有关此主题的更多通知。\n",
                 "newDiscussionTag": "{recipient_display_name}，你好！\n\n{actor_display_name} 刚刚将 {author_display_name} 的主题标签变更为你关注的标签：{discussion_title}\n\n点击下方链接查看主题帖：\n{discussion_url}\n"
-            },
-            "newDiscussionInTag": "[Tag | New Discussion] title",
-            "newPostInTag": "[Tag | New Post] title",
-            "newDiscussionTag": "[Tag | Changed Tag] title"
+            }
         },
         "ref": {
             "follow": "关注",
@@ -78,8 +72,7 @@
             "lurking": "吃瓜中",
             "filtering_options": {
                 "none": "关注的主题",
-                "tags": "关注的标签",
-                "all": "所有关注"
+                "tags": "关注的标签"
             }
         }
     }
