--- a/translations/zh_Hans/fof-gamification.json
+++ b/translations/zh_Hans/fof-gamification.json
@@ -28,8 +28,7 @@
             },
             "modal": {
                 "title": "打分",
-                "upvotes_label": "赞",
-                "downvotes_label": "踩"
+                "upvotes_label": "赞"
             },
             "mod_item": "点赞的人"
         },
@@ -83,9 +82,6 @@
                         "name": "名称"
                     }
                 }
-            },
-            "nav": {
-                "desc": "增强 Flarum 论坛的游戏性"
             }
         }
     }
