--- a/translations/zh_Hans/fof-github-sponsors.json
+++ b/translations/zh_Hans/fof-github-sponsors.json
@@ -10,8 +10,7 @@
                 "api_token_label": "API 令牌",
                 "account_type_label": "账户类型",
                 "login_label": "登录",
-                "group_label": "用户组分配",
-                "title": "FriendsOfFlarum GitHub Sponsors"
+                "group_label": "用户组分配"
             }
         }
     }
