--- a/translations/zh_Hans/fof-linguist.json
+++ b/translations/zh_Hans/fof-linguist.json
@@ -47,10 +47,7 @@
                 "frontend": "前端筛选",
                 "frontend-all-except-admin": "全部",
                 "mass-edit": "更多",
-                "results": "已显示 {shown} 条匹配翻译，共 {total} 条",
-                "for-extension-unavailable": "命名空间「{namespace}」没有翻译资源。 这个插件可能没有需要翻译的内容，或者使用了其他命名空间。 尝试搜索翻译文本来定位翻译资源吧。\n",
-                "with-original-translations-in-locales": "有原文翻译",
-                "without-original-translations-in-locales": "无原文翻译"
+                "results": "已显示 {shown} 条匹配翻译，共 {total} 条"
             },
             "clear-cache": {
                 "text": "新增翻译尚未部署。注意：清理缓存后的论坛首次加载速度会变慢。\n",
@@ -114,10 +111,6 @@
                 "lib": "Lib（论坛和管理面板共用）",
                 "ref": "Ref (被其他键复用)",
                 "api": "接口"
-            },
-            "menu": {
-                "title": "语言学家",
-                "description": "自定义界面翻译。"
             }
         }
     }
