--- a/translations/zh_Hans/fof-links.json
+++ b/translations/zh_Hans/fof-links.json
@@ -17,17 +17,11 @@
                 "icon_text": "=> core.ref.icon_text",
                 "url_label": "=> fof-links.ref.url",
                 "url_placeholder": "=> fof-links.ref.url",
-                "visibility": "链接可见范围",
-                "registered_only": ""
+                "visibility": "链接可见范围"
             },
             "links": {
                 "create_button": "=> fof-links.ref.create_link",
-                "links": "=> fof-links.ref.links",
-                "about_text": "管理导航栏链接。"
-            },
-            "nav": {
-                "links_button": "=> fof-links.ref.links",
-                "links_text": "管理导航栏链接。"
+                "links": "=> fof-links.ref.links"
             }
         },
         "ref": {
