--- a/translations/zh_Hans/fof-masquerade.json
+++ b/translations/zh_Hans/fof-masquerade.json
@@ -51,9 +51,7 @@
                 "force-user-to-completion": "强制用户填写资料",
                 "options": "选项",
                 "option-new": "添加选项",
-                "option-comma-warning": "选项名不能包含任何半角逗号 (\",\")。",
-                "disable-user-bio": "",
-                "option-coma-warning": ""
+                "option-comma-warning": "选项名不能包含任何半角逗号 (\",\")。"
             },
             "types": {
                 "advanced": "高级",
@@ -61,10 +59,6 @@
                 "email": "电子邮件",
                 "select": "下拉列表",
                 "url": "网址"
-            },
-            "title": "化装舞会",
-            "menu": {
-                "description": "配置用户个人资料字段。\n"
             }
         }
     }
