--- a/translations/zh_Hans/fof-moderator-notes.json
+++ b/translations/zh_Hans/fof-moderator-notes.json
@@ -18,9 +18,7 @@
                 "noNotes": "还没有人发表留言，何不坐第一个沙发？",
                 "submit_button": "发表",
                 "delete": "删除",
-                "confirm": "确定要删除这条留言吗？",
-                "no_content_given": "无法发表空留言。",
-                "confirmation_message": "留言成功！您也许需要刷新页面才能看到它。"
+                "confirm": "确定要删除这条留言吗？"
             },
             "user": {
                 "notes": "留言板"
@@ -29,9 +27,7 @@
         "api": {
             "auto_note": "_切换到此账号：_ reason",
             "auto_note_actor": "_切换到_ @username：reason",
-            "no_reason_provided": "无理由",
-            "auto-note": "我使用 FoF Impersonate 切换到当前用户账户。",
-            "auto-note-actor": "使用 FoF Impersonate 替代 '用户名'"
+            "no_reason_provided": "无理由"
         }
     }
 }
