--- a/translations/zh_Hans/fof-secure-https.json
+++ b/translations/zh_Hans/fof-secure-https.json
@@ -2,8 +2,7 @@
     "fof-secure-https": {
         "admin": {
             "settings": {
-                "replace": "通过 HTTPS 代理图片",
-                "title": "配置"
+                "replace": "通过 HTTPS 代理图片"
             }
         },
         "forum": {
