--- a/translations/zh_Hans/glowingblue-password-strength.json
+++ b/translations/zh_Hans/glowingblue-password-strength.json
@@ -11,22 +11,14 @@
                 "otherOptions": "其它选项",
                 "enableInputColor": "让密码框文字颜色跟随强度颜色变化",
                 "enableInputBorderColor": "让密码框的边框颜色跟随强度颜色变化",
-                "enablePasswordToggle": "开启显示密码功能",
-                "enableLabel": "显示密码强度提示",
-                "displayMode": "选择提示方式",
-                "enableInputBackground": "让密码框背景色跟随强度颜色变化",
-                "noInputColor": "不改变密码框颜色",
-                "foreColor": "密码框文字颜色"
+                "enablePasswordToggle": "开启显示密码功能"
             }
         },
         "forum": {
             "strengthLabels": {
                 "weak": "弱",
                 "medium": "还可以再强一点",
-                "strong": "强",
-                "veryWeak": "非常弱",
-                "average": "一般",
-                "veryStrong": "非常强"
+                "strong": "强"
             }
         }
     }
