--- a/translations/zh_Hans/ianm-html-head.json
+++ b/translations/zh_Hans/ianm-html-head.json
@@ -16,8 +16,7 @@
                 "text": "请确保语法正确，因为在<head>标签中提供不正确的数据可能会使论坛出错。保存后，请使用开关按钮启用头部元素。",
                 "description_label": "描述",
                 "header_label": "自定义头部元素",
-                "save_button": "保存",
-                "title": ""
+                "save_button": "保存"
             }
         }
     }
