--- a/translations/zh_Hans/kilowhat-custom-paths.json
+++ b/translations/zh_Hans/kilowhat-custom-paths.json
@@ -47,8 +47,7 @@
                 },
                 "reset": "重置路径",
                 "disabled": "未启用该扩展",
-                "redirect": "将默认 Flarum 路径重定向到新路径",
-                "title": "自定义路径"
+                "redirect": "将默认 Flarum 路径重定向到新路径"
             }
         }
     }
