--- a/translations/zh_Hans/kilowhat-wordpress.json
+++ b/translations/zh_Hans/kilowhat-wordpress.json
@@ -76,8 +76,7 @@
                 "customize_text": "您的 LESS/CSS 将仅覆盖 WordPress 框架内的 Flarum <a>默认样式</a>。"
             },
             "permissions": {
-                "gambits": "Wordpress 第三方策略（详见文档）",
-                "heading": "WordPress"
+                "gambits": "Wordpress 第三方策略（详见文档）"
             },
             "save-controls": {
                 "validation-errors": "您提交的内容有误",
@@ -102,16 +101,6 @@
                 "wordpress_password": "WordPress 管理员密码",
                 "wordpress_password_help": "该密码仅用于初始化配置，不被任何形式存储。",
                 "install": "安装"
-            },
-            "menu": {
-                "title": "WordPress",
-                "description": "配置 WordPress 集成。"
-            },
-            "header": {
-                "title": "高级 WordPress 集成",
-                "documentation": "完整的在线文档",
-                "discuss": "Flarum 论坛主题帖",
-                "version": "版本 {version}"
             }
         },
         "forum": {
