--- a/translations/zh_Hans/migratetoflarum-fake-data.json
+++ b/translations/zh_Hans/migratetoflarum-fake-data.json
@@ -13,8 +13,7 @@
                 "date": "=> migratetoflarum-fake-data.ref.date",
                 "date-start-placeholder": "=> migratetoflarum-fake-data.ref.date-start-placeholder",
                 "date-interval-placeholder": "=> migratetoflarum-fake-data.ref.date-interval-placeholder",
-                "send": "生成数据",
-                "title": "生成虚假数据"
+                "send": "生成数据"
             }
         },
         "forum": {
@@ -45,8 +44,7 @@
             "date": "种子",
             "date-start-placeholder": "开始日期（默认现在）",
             "date-interval-placeholder": "间隔（默认 1 秒）",
-            "send": "生成数据",
-            "discussion-count": "要创建的主题数"
+            "send": "生成数据"
         }
     }
 }
