--- a/translations/zh_Hans/reflar-recache.json
+++ b/translations/zh_Hans/reflar-recache.json
@@ -29,8 +29,7 @@
                     "fillin": "请完整填写 Redis 表单",
                     "success": "已成功连接至 Redis 服务器。"
                 },
-                "check_button": "检查",
-                "text": "在下面配置当前活动的缓存驱动。可以随时预先配置任何\n可用的其他驱动程序，之后再切换。\n"
+                "check_button": "检查"
             }
         }
     }
