--- a/translations/zh_Hans/therealsujitk-gifs.json
+++ b/translations/zh_Hans/therealsujitk-gifs.json
@@ -13,12 +13,7 @@
         },
         "admin": {
             "gifs": {
-                "giphyAPIkey": "Giphy API 密钥",
-                "title": "GIF API 设置"
-            },
-            "about": {
-                "stringA": "插件作者： ",
-                "stringB": "捐助作者： "
+                "giphyAPIkey": "Giphy API 密钥"
             }
         }
     }
