--- a/translations/zh_Hans/therealsujitk-hljs.json
+++ b/translations/zh_Hans/therealsujitk-hljs.json
@@ -2,12 +2,7 @@
     "therealsujitk": {
         "admin": {
             "hljs": {
-                "themename": "主题样式（预览：http://t.cn/A6ZtzMiG）",
-                "title": "highlight.js 设置"
-            },
-            "about": {
-                "stringA": "插件作者： ",
-                "stringB": "捐助作者： "
+                "themename": "主题样式（预览：http://t.cn/A6ZtzMiG）"
             }
         }
     }
