--- a/translations/zh_Hans/v17development-support.json
+++ b/translations/zh_Hans/v17development-support.json
@@ -74,8 +74,7 @@
                     "hide_article": "隐藏文章",
                     "recover_article": "还原文章",
                     "delete_forever": "永久删除",
-                    "view_ratings": "查看评价",
-                    "event_logs": ""
+                    "view_ratings": "查看评价"
                 }
             },
             "support_ratings": {
@@ -116,10 +115,6 @@
                     "rating": "评价",
                     "username": "=> core.ref.username",
                     "rated_on": "评价时间"
-                },
-                "events": {
-                    "title": "",
-                    "article_created": ""
                 }
             },
             "utils": {
