--- a/translations/zh_Hans/clarkwinkelmann-email-as-display-name.json
+++ b/translations/zh_Hans/clarkwinkelmann-email-as-display-name.json
@@ -3,12 +3,10 @@
         "admin": {
             "permissions": {
                 "view-own": "将效果应用于登入账号自身（私密可见性）",
-                "view-all": "将效果应用于所有用户（公开可见性）",
-                "heading": "以邮箱作为显示昵称"
+                "view-all": "将效果应用于所有用户（公开可见性）"
             },
             "settings": {
-                "remove-username-registration": "从注册窗口中移除用户名输入框",
-                "title": "扩展程序设置"
+                "remove-username-registration": "从注册窗口中移除用户名输入框"
             }
         },
         "forum": {
