--- a/translations/zh_Hans/clarkwinkelmann-emojionearea.json
+++ b/translations/zh_Hans/clarkwinkelmann-emojionearea.json
@@ -11,9 +11,7 @@
                 "enableTones": "启用肤色选择",
                 "filtersPosition": "在底部显示分类",
                 "searchPosition": "在底部显示搜索和肤色",
-                "hideFlarumButton": "隐藏 Flarum 原生表情按钮",
-                "title": "Emoji 表情设置",
-                "hideFlarumButtonHelp": "本扩展程序需开启原生 emoji 插件后方可使用"
+                "hideFlarumButton": "隐藏 Flarum 原生表情按钮"
             }
         }
     }
