--- a/translations/zh_Hans/clarkwinkelmann-first-post-approval.json
+++ b/translations/zh_Hans/clarkwinkelmann-first-post-approval.json
@@ -6,8 +6,7 @@
             },
             "settings": {
                 "discussionCount": "主题发布所需的前置审核额度",
-                "postCount": "回帖所需的前置审核额度",
-                "title": "前置审核 - 设置"
+                "postCount": "回帖所需的前置审核额度"
             }
         }
     }
