--- a/translations/zh_Hans/clarkwinkelmann-group-list.json
+++ b/translations/zh_Hans/clarkwinkelmann-group-list.json
@@ -7,8 +7,7 @@
             "settings": {
                 "showSideNavLink": "添加侧边栏入口",
                 "showAvatarBadges": "在头像上展示其他用户组徽章",
-                "showOnlineStatus": "展示在线状态",
-                "title": "组群一览表设置"
+                "showOnlineStatus": "展示在线状态"
             },
             "items": {
                 "add": "添加用户组"
