--- a/translations/zh_Hans/clarkwinkelmann-passwordless.json
+++ b/translations/zh_Hans/clarkwinkelmann-passwordless.json
@@ -14,8 +14,7 @@
                 "passwordless-login-by-default": "将无密码登录作为默认登录方式",
                 "hide-sign-up-password": "于注册窗口中隐藏密码输入框",
                 "token-life": "令牌生命周期（分钟）",
-                "mail-footer": "邮件页脚文本",
-                "title": "无密码登录设置"
+                "mail-footer": "邮件页脚文本"
             }
         },
         "api": {
