--- a/translations/zh_Hans/clarkwinkelmann-see-past-first-post.json
+++ b/translations/zh_Hans/clarkwinkelmann-see-past-first-post.json
@@ -10,8 +10,7 @@
             },
             "settings": {
                 "hide-comment-count": "隐藏主题列表中的评论数",
-                "hide-last-post": "隐藏主题列表中的最新回复者、最新回复日期",
-                "title": "只给看一楼贴 - 设置"
+                "hide-last-post": "隐藏主题列表中的最新回复者、最新回复日期"
             }
         }
     }
