--- a/translations/zh_Hans/clarkwinkelmann-who-read.json
+++ b/translations/zh_Hans/clarkwinkelmann-who-read.json
@@ -37,8 +37,7 @@
                 "see-read": "查看阅读进度",
                 "see-subscription": "查看订阅状态",
                 "see-unread": "查看其他用户的未读状态",
-                "mark-unread": "允许用户标记主题为未读",
-                "heading": "谁看过"
+                "mark-unread": "允许用户标记主题为未读"
             },
             "settings": {
                 "show-in-discussion-list": "在首页主题列表中显示读者",
@@ -48,8 +47,7 @@
                 "hide-when-behind": "不显示阅读进度落后太多的用户（单位：贴）如果值为1，则表示只要用户在主题中有1个帖子未读，就不在读者列表中展示他/她。清空此值恢复默认。",
                 "max-visible": "横幅读者列表的初始最大展示人数（人数过多后，需要点击展开按钮查看完整列表）",
                 "unread-icon": "头像的未读徽章图标",
-                "only-groups": "仅显示群组用户的阅读进度",
-                "title": "阅读进度 - 设置"
+                "only-groups": "仅显示群组用户的阅读进度"
             }
         }
     }
