--- a/translations/zh_Hans/core.json
+++ b/translations/zh_Hans/core.json
@@ -21,8 +21,7 @@
                 "favicon_text": "上传图片做为论坛的站点图标，该图标会显示在浏览器标签页、搜索引擎结果条目及书签等多个地方。",
                 "logo_heading": "Logo",
                 "logo_text": "上传图片代替论坛名称，并展示在导航栏左侧。",
-                "title": "外观",
-                "submit_button": "=> core.ref.save_changes"
+                "title": "外观"
             },
             "basics": {
                 "all_discussions_label": "=> core.ref.all_discussions",
@@ -40,9 +39,7 @@
                 "slug_driver_text": "选择要用于此实体的驱动程序。",
                 "title": "常规",
                 "welcome_banner_heading": "欢迎横幅",
-                "welcome_banner_text": "横幅文本将显示于「全部主题」页面顶部，可以用于欢迎论坛访客。",
-                "saved_message": "您的更改已保存",
-                "submit_button": "=> core.ref.save_changes"
+                "welcome_banner_text": "横幅文本将显示于「全部主题」页面顶部，可以用于欢迎论坛访客。"
             },
             "dashboard": {
                 "clear_cache_button": "清除缓存",
@@ -99,16 +96,7 @@
                 "send_test_mail_success": "测试邮件发送成功！",
                 "send_test_mail_text": "使用上述设置发送测试邮件到您的邮箱：{email}",
                 "smtp_heading": "SMTP 设置",
-                "title": "=> core.ref.email",
-                "submit_button": "=> core.ref.save_changes",
-                "heading": "=> core.ref.email",
-                "text": "配置论坛发信服务方式。",
-                "mail_mandrill_secret_label": "Secret key",
-                "mail_ses_key_label": "Key",
-                "mail_ses_region_label": "区域",
-                "mail_ses_secret_label": "Secret",
-                "mandrill_heading": "Mandrill 设置",
-                "ses_heading": "SES 设置"
+                "title": "=> core.ref.email"
             },
             "extension": {
                 "configure_scopes": "设置范围",
@@ -128,8 +116,7 @@
                 "no_settings": "此扩展无设置项。",
                 "open_modal": "打开设置",
                 "permissions_title": "权限",
-                "uninstall_button": "卸载",
-                "saved_message": "您的修改已保存。"
+                "uninstall_button": "卸载"
             },
             "header": {
                 "get_help": "帮助",
@@ -162,16 +149,7 @@
                 "permissions_title": "=> core.admin.permissions.description",
                 "userlist_button": "=> core.admin.users.title",
                 "userlist_title": "=> core.admin.users.description",
-                "search_placeholder": "搜索扩展程序",
-                "appearance_text": "自定义论坛色调、图标以及其他元素。",
-                "basics_text": "设置论坛名称、语言以及其他常规设置",
-                "dashboard_text": "论坛统计数据概览",
-                "email_text": "配置论坛邮件服务",
-                "extensions_button": "扩展程序",
-                "extensions_text": "为您的论坛添加额外的功能",
-                "permissions_text": "设置各用户组访问及操作权限",
-                "advanced_button": "高级",
-                "advanced_text": "配置专门针对高级用户的设置。"
+                "search_placeholder": "搜索扩展程序"
             },
             "permissions": {
                 "allow_post_editing_label": "编辑帖子内容",
@@ -201,9 +179,7 @@
                 "view_forum_label": "查看论坛（讨论和用户）",
                 "view_hidden_groups_label": "查看隐藏的用户组徽章",
                 "view_last_seen_at_label": "查看用户上次在线时间",
-                "view_post_ips_label": "查看 IP 地址",
-                "view_discussions_label": "查看主题",
-                "view_user_list_label": "访问用户资料"
+                "view_post_ips_label": "查看 IP 地址"
             },
             "permissions_controls": {
                 "allow_indefinitely_button": "无限制",
@@ -261,24 +237,6 @@
                 },
                 "title": "=> core.ref.users",
                 "total_users": "用户数：{count}"
-            },
-            "add_extension": {
-                "developer_text": "如果您是一个开发者，您可以阅读<a>开发文档</a>自行开发扩展程序。",
-                "install_text": "同时，您可以在 <a>Flarum 社区</a>搜索扩展程序，并通过 Composer 手动安装。",
-                "temporary_text": "在不远的将来，这里将为您提供添加扩展程序的便捷途径。如我们所说，我们正在建立一套生态系统！",
-                "title": "添加扩展程序"
-            },
-            "extensions": {
-                "add_button": "添加扩展程序",
-                "settings_button": "=> core.ref.settings",
-                "uninstall_button": "卸载"
-            },
-            "advanced": {
-                "help_text": "请注意这些设置仅适用于高级用户",
-                "heading_security": "安全设置",
-                "post_flood_interval": "发送多个帖子之间的等待时间",
-                "post_flood_interval_text": "配置用户在创建另一条帖子之前必须等待的时间（以秒为单位）",
-                "enter_positive_number": "请输入一个正数"
             }
         },
         "forum": {
@@ -484,20 +442,6 @@
                 "alert_message": "=> core.ref.confirmation_email_sent",
                 "resend_button": "重新发送验证邮件",
                 "sent_message": "发送"
-            },
-            "edit_user": {
-                "activate_button": "激活账号",
-                "email_heading": "=> core.ref.email",
-                "email_label": "=> core.ref.email",
-                "groups_heading": "用户组",
-                "password_heading": "=> core.ref.password",
-                "password_label": "=> core.ref.password",
-                "set_password_label": "设置新密码",
-                "submit_button": "=> core.ref.save_changes",
-                "title": "编辑用户",
-                "username_heading": "=> core.ref.username",
-                "username_label": "=> core.ref.username",
-                "nothing_available": "暂无可供您编辑的项目。"
             }
         },
         "lib": {
@@ -533,8 +477,7 @@
             },
             "number_suffix": {
                 "kilo_text": "千",
-                "mega_text": "百万",
-                "ten_kilo_text": "万"
+                "mega_text": "百万"
             },
             "series": {
                 "glue_text": "， ",
@@ -647,8 +590,7 @@
             "users": "用户",
             "view": "查看",
             "write_a_reply": "说点什么吧...",
-            "you": "你",
-            "icon_label": "图标"
+            "you": "你"
         },
         "group": {
             "admin": "管理员",
