--- a/translations/zh_Hans/fof-forum-statistics-widget.json
+++ b/translations/zh_Hans/fof-forum-statistics-widget.json
@@ -13,8 +13,7 @@
             "settings": {
                 "widget_ignore_private_discussions_label": "不统计私密主题",
                 "widget_order_label": "控件顺序",
-                "widget_helper_text": "更改此设置来调整统计控件在论坛侧边栏上的位置。 值越大位置位置越高（此值可为负数）。",
-                "title": "控件设置"
+                "widget_helper_text": "更改此设置来调整统计控件在论坛侧边栏上的位置。 值越大位置位置越高（此值可为负数）。"
             },
             "permissions": {
                 "view_discussions_count_label": "查看论坛小部件主题数",
