--- a/translations/zh_Hans/fof-geoip.json
+++ b/translations/zh_Hans/fof-geoip.json
@@ -13,8 +13,7 @@
                 "service_ipapi_label": "IP Api",
                 "service_ipapi_description": "<b>http://ip-api.com</b>，每分钟可免费查询 150 次。请求数超额的话，可能会将您的 IP 列入黑名单，您可以访问 <b>http://ip-api.com/docs/unban</b> 申请解除。",
                 "access_key_label": "Access Key",
-                "security_label": "安全模块（需要 professional plus）",
-                "service__description": "请选择一个 IP 查询服务。"
+                "security_label": "安全模块（需要 professional plus）"
             }
         },
         "forum": {
