--- a/translations/zh_Hans/fof-mason.json
+++ b/translations/zh_Hans/fof-mason.json
@@ -55,9 +55,7 @@
                 "save-field-for-answers": "保存此字段以添加选项答案",
                 "is_suggested": "推荐答案",
                 "new-answer": "新建答案",
-                "new-answer-placeholder": "在此键入文本",
-                "min_answers_count": "最小答案数",
-                "max_answers_count": "最大答案数"
+                "new-answer-placeholder": "在此键入文本"
             },
             "messages": {
                 "delete-answer-confirmation": "确定要删除答案「{content}」？ 这将从所有使用它的主题中移除该答案，如果您想要保留现有答案请停用答案建议。 删除答案？\n",
@@ -91,12 +89,7 @@
                 "fill-fields": "填写新主题的表单",
                 "update-own-fields": "更新自己主题的表单",
                 "update-other-fields": "更新任意主题的表单",
-                "skip-required-fields": "允许跳过必填字段",
-                "mason-heading": "梅森表单"
-            },
-            "menu": {
-                "title": "梅森表单",
-                "description": "配置自定义主题帖的表单字段。"
+                "skip-required-fields": "允许跳过必填字段"
             }
         }
     }
