--- a/translations/zh_Hans/fof-nightmode.json
+++ b/translations/zh_Hans/fof-nightmode.json
@@ -12,9 +12,7 @@
                     "default_theme_helper": "自动为新用户、访客和未自定义的用户应用的颜色模式。",
                     "theme_auto": "=> fof-nightmode.ref.auto",
                     "theme_light": "=> fof-nightmode.ref.light",
-                    "theme_dark": "=> fof-nightmode.ref.dark",
-                    "title": "FoF 夜间模式",
-                    "default_theme_important": "这也会影响没有手动选择日夜模式的现有用户！"
+                    "theme_dark": "=> fof-nightmode.ref.dark"
                 }
             }
         },
