--- a/translations/zh_Hans/fof-pages.json
+++ b/translations/zh_Hans/fof-pages.json
@@ -20,8 +20,7 @@
                 "url_placeholder": "=> fof-pages.ref.url"
             },
             "pages": {
-                "create_button": "=> fof-pages.ref.create_page",
-                "about_text": "新建、管理自定义静态页面。"
+                "create_button": "=> fof-pages.ref.create_page"
             },
             "pages_list": {
                 "empty_text": "这里还没有内容。",
@@ -33,10 +32,6 @@
             "badges": {
                 "hidden": "草稿",
                 "restricted": "部分人可见"
-            },
-            "nav": {
-                "pages_button": "=> fof-pages.ref.pages",
-                "pages_text": "新建自定义静态页面。"
             }
         },
         "ref": {
