--- a/translations/zh_Hans/fof-recaptcha.json
+++ b/translations/zh_Hans/fof-recaptcha.json
@@ -5,8 +5,7 @@
                 "help_text": "点击<a>此处</a>获取 Google reCAPTCHA 证书。",
                 "secret_key_label": "密钥",
                 "site_key_label": "网站密钥",
-                "type_label": "reCAPTCHA 类型",
-                "title": "FriendsOfFlarum reCAPTCHA"
+                "type_label": "reCAPTCHA 类型"
             },
             "permissions": {
                 "post_without_captcha": "发帖不需要验证码"
