--- a/translations/zh_Hans/itnt-uitab.json
+++ b/translations/zh_Hans/itnt-uitab.json
@@ -3,14 +3,7 @@
         "admin": {
             "settings": {
                 "help_text": "如果你的Flarum安装在一个子目录下，请在下面指定子目录（以\"/\"结尾），否则请保留默认值。 例如：<code>/sub/</code>",
-                "home_page_label": "子目录",
-                "requirement": "",
-                "title": "",
-                "tags_title": "",
-                "tags_page_label": "",
-                "create_page_label": "",
-                "settings_page_label": "",
-                "notifications_page_label": ""
+                "home_page_label": "子目录"
             }
         }
     }
