--- a/translations/zh_Hans/jslirola-login2seeplus.json
+++ b/translations/zh_Hans/jslirola-login2seeplus.json
@@ -13,13 +13,7 @@
             "image": "图片",
             "code": "代码",
             "post": {
-                "title": "隐藏超过此长度的内容（<em>-1</em> 表示显示全部）",
-                "help": "值为 <em>-1</em> 表示显示全部内容。"
-            },
-            "php": {
-                "title": "传统模式",
-                "help": "*不推荐* 用于兼容旧浏览器，插件在后台处理工作。需要启用 <code>mb_substr</code> 和 <code>mb_strlen</code>。",
-                "label": "使用 PHP"
+                "title": "隐藏超过此长度的内容（<em>-1</em> 表示显示全部）"
             }
         }
     }
