--- a/translations/zh_Hans/kilowhat-audit-pro.json
+++ b/translations/zh_Hans/kilowhat-audit-pro.json
@@ -8,14 +8,7 @@
                 "title": "审计",
                 "free": "免费版",
                 "pro": "专业版",
-                "upgrade": "升级到专业版",
-                "documentation": "完整的在线文档",
-                "discuss": "Flarum 社区发布帖",
-                "version": "版本 {version}"
-            },
-            "menu": {
-                "title": "审计日志",
-                "description": "审查近期的论坛活动。"
+                "upgrade": "升级到专业版"
             }
         },
         "forum": {
