--- a/translations/zh_Hans/kilowhat-formulaire.json
+++ b/translations/zh_Hans/kilowhat-formulaire.json
@@ -52,14 +52,7 @@
                     "accept-submissions": "开启",
                     "allow-modification": "修改",
                     "submissions": "提交结果",
-                    "actions": "动作",
-                    "type": "类型"
-                },
-                "title": "表单管理员",
-                "type-options": {
-                    "standalone": "独立",
-                    "groups": "用户资料",
-                    "tags": "主题字段"
+                    "actions": "动作"
                 }
             },
             "global-settings": {
@@ -149,12 +142,7 @@
                     "permission-see-own": "",
                     "permission-see-any": "",
                     "permission-edit-own": "",
-                    "permission-edit-any": "",
-                    "slug": "别名（URL Slug）",
-                    "email-confirmation-message": "通过邮件确认信息（格式化启用，必须启用上方确认项）",
-                    "email-notification-message": "邮件通知消息",
-                    "email-confirmation-title": "确认邮件的标题（发给参与者）",
-                    "email-notification-title": "通知邮件的标题"
+                    "permission-edit-any": ""
                 },
                 "link-options": {
                     "standalone": "Standalone",
@@ -168,14 +156,7 @@
                 "email-notification-options": "通知邮件模板",
                 "exiting-with-unsaved-data": "",
                 "preview": "预览",
-                "save-for-preview": "保存并预览",
-                "template": "模板",
-                "expert-mode": "专家模式",
-                "restore": "还原",
-                "hide": "删除",
-                "delete": "永久删除",
-                "delete-confirmation": "表单「{title}」将被永久删除",
-                "title": "编辑表单"
+                "save-for-preview": "保存并预览"
             },
             "auto-discussion-options-modal": {
                 "title": "自动主题选项",
@@ -350,10 +331,7 @@
                     "updated_at": "更新日期",
                     "hidden_at": "软删除日期"
                 }
-            },
-            "submission-link-user-invalid": "该用户的用户组与此表单所需的用户组不匹配",
-            "submission-link-discussion-invalid": "该主题的标签与此表单所需的标签不匹配",
-            "submission-link-already-exists": "链接重复"
+            }
         },
         "mail": {
             "title-your-submission": "{title} 的提交",
