--- a/translations/zh_Hans/maicol07-sso.json
+++ b/translations/zh_Hans/maicol07-sso.json
@@ -13,9 +13,7 @@
                 "jwt_section_subtitle": "JWT Addon 设置",
                 "jwt_iss": "Issuer Domain",
                 "jwt_signer_key": "Signer key",
-                "jwt_signing_algorithm": "签名方式",
-                "disable_login_btn": "禁用登录按钮",
-                "disable_signup_btn": "禁用注册按钮"
+                "jwt_signing_algorithm": "签名方式"
             }
         },
         "forum": {
