--- a/translations/zh_Hans/michaelbelgium-profile-views.json
+++ b/translations/zh_Hans/michaelbelgium-profile-views.json
@@ -9,16 +9,7 @@
         "admin": {
             "settings": {
                 "track_guests_label": "追踪未登录访客",
-                "max_viewcount_label": "访客列表的最多展示人数",
-                "title": "访客统计设置"
-            }
-        }
-    },
-    "flarum_profile_views": {
-        "forum": {
-            "user": {
-                "title_last_viewers": "最近访客",
-                "views_count_text": "访客总量 {viewcount}|访客总量 {viewcount}"
+                "max_viewcount_label": "访客列表的最多展示人数"
             }
         }
     }
