--- a/translations/zh_Hans/nearata-copy-code-to-clipboard.json
+++ b/translations/zh_Hans/nearata-copy-code-to-clipboard.json
@@ -1,8 +1,7 @@
 {
     "nearata-copy-code-to-clipboard": {
         "forum": {
-            "copy": "复制代码",
-            "copied": "已复制"
+            "copy": "复制代码"
         }
     }
 }
